--- a/src/client/app/modules/movies/index/index.styl
+++ b/src/client/app/modules/movies/index/index.styl
@@ -7,7 +7,6 @@
 #movies md-card {
   background: none;
   box-shadow none;
-  //rgba(255, 255, 255, 0.1)
 }
 
 
@@ -25,30 +24,74 @@
   box-shadow: 0 7px 21px #141414;
 }
 
+
 #movies .movie h1 {
+  cursor:pointer;
   color:#fff;
-  padding:5px 0 10px 5px;
   font-weight:normal;
   font-size:16px;
 }
 
-#movies .movie figure {
-  margin:0 auto;
-  //text-align:center;
+#movies .movie .picture {
+  width:auto;
+  position:relative;
 }
 
-#movies .movie figure img {
+#movies .movie .picture .title  {
+  padding:10px 3%;
+  position:absolute;
+  bottom:0;
+  background: rgba(255, 255, 255, 0.1);
+  width:94%;
+}
+
+#movies .movie .picture figure {
+  margin:0 auto;
+}
+
+#movies .movie .picture figure img {
+  cursor:pointer;
   width:auto;
 }
 
-#movies .movie figure figcaption {
-
+#movies .movie .picture figure figcaption {
+  display:none;
 }
 
-#movies .movie .notes {
-  width:100px;
+#movies .movie .picture .notes {
+  width:75px;
 }
 
-#movies .movie .notes img.star {
-  width:20px;
+#movies .movie .picture .notes img.star {
+  cursor:pointer;
+  width:15px;
+}
+
+#movies .movie .picture .hover {
+  display:none;
+  position:absolute;
+  top:0;
+  padding:5px 10px;
+}
+
+#movies .movie .picture:hover .hover {
+  display:block;
+}
+
+#movies .movie .picture .hover .eye,
+#movies .movie .picture .hover .eye-full {
+  cursor:pointer;
+  display:block;
+  height:32px;
+  width:32px;
+}
+#movies .movie .picture .hover .eye {
+  background: url('../assets/images/films/eye.png') no-repeat 50% 50%;
+  background-size:32px;
+}
+
+#movies .movie .picture .hover .eye-full {
+  background: url('../assets/images/films/eye-full.png') no-repeat 50% 50%;
+  background-size:32px;
+
 }
