--- a/src/client/css/utilities.styl
+++ b/src/client/css/utilities.styl
@@ -114,3 +114,7 @@ for n in 0..((1 - $i) / 0.1)
 .full-image-background
   background-size: cover
   background-position: center
+
+// md-icon height auto
+md-icon[md-font-icon]
+  height auto
