--- a/src/client/app/components/menu/menu.html
+++ b/src/client/app/components/menu/menu.html
@@ -13,7 +13,7 @@
     <md-divider></md-divider>
 
     <md-button ui-sref="authentication.login" class="md-primary md-raised side-menu-link ">
-        <md-icon class="side-menu-icon" md-font-icon="zmdi zmdi-home"></md-icon>
+        <md-icon class="side-menu-icon" md-font-icon="zmdi zmdi-sign-in"></md-icon>
         <span translate="">ADMIN.TOOLBAR.LOGOUT</span>
     </md-button>
 </md-content>
