--- a/src/client/app/components/toolbars/toolbars.html
+++ b/src/client/app/components/toolbars/toolbars.html
@@ -12,7 +12,7 @@
         </md-button>
         <md-menu-content width="3">
             <md-menu-item ng-repeat="language in vm.languages">
-                <md-button ng-click="vm.switchLanguage(language.key)" translate="{{language.name}}" aria-label="{{language.name}}"></md-button>
+                <md-button ng-click="vm.switchLanguage(language.key)" translate="LANGUAGES.{{language.name}}" aria-label="{{language.name}}"></md-button>
             </md-menu-item>
         </md-menu-content>
     </md-menu>
