--- a/src/client/css/utilities.styl
+++ b/src/client/css/utilities.styl
@@ -56,6 +56,24 @@ for n in 0..((1 - $i) / 0.1)
     opacity: $i !important
   $i = $i + 0.1
 
+// - Overlay Classes
+$i = 0
+for n in 0..((1 - $i) / 0.5)
+  .overlay-{round($i * 100)}
+    position: relative;
+    z-index: 1;
+    &:before
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0, $i);
+      z-index: -1;
+  $i = $i + 0.05
+
+
 // Positioning
 .position-absolute
   position: absolute
@@ -118,3 +136,7 @@ for n in 0..((1 - $i) / 0.1)
 // md-icon height auto
 md-icon[md-font-icon]
   height auto
+
+#admin-panel-content-view
+  display block
+  position relative
